oxiplate-derive/tests/crates/unreachable-stable/tests/broken/block/adding-item-after-ended.stderr
error: proc-macro derive panicked
 --> tests/broken/block/adding-item-after-ended.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. Enable `better-internal-errors` feature for an easier-to-debug error message. Error: Attempted to add item to ended `block` statement

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/block/adding-item-after-ended.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `Data`
 --> tests/broken/block/adding-item-after-ended.rs:5:1
  |
5 | struct Data;
  | ^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
