oxiplate-derive/tests/crates/unreachable-stable/tests/broken/block/adding-item-after-ended.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline(r#"{% block foo %}{% endblock %}{{ "b" }}"#)]
struct Data;

fn main() {
    print!("{}", Data);
}
